tests/expectations/parser/program/illegal_import_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'final', 'const', 'fn', 'import', 'program', 'script' -- found 'stub'
    --> test:2:1
     |
   2 | stub credits.aleo {
     | ^^^^
